[feature] parse examples: support docstrings for background and examples [chore] refactor TFeature: move Steps property to TBackground

--- a/source/TBackground.cls
+++ b/source/TBackground.cls
@@ -9,24 +9,55 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Dim m_parent_feature As TFeature
-
-Public Property Get ParentFeature() As TFeature
-
-    Set ParentFeature = m_parent_feature
-End Property
-
-Public Property Let ParentFeature(ByVal parent_feature As TFeature)
-    Set m_parent_feature = parent_feature
-End Property
+Dim m_background_description As String
+Dim m_steps As Collection
 
 Public Sub add_step(step_head As String, step_name As String)
 
     Dim new_step As TStep
+    Dim previous_step_type As String
     
+    If Me.Steps.Count = 0 Then
+        previous_step_type = STEP_TYPE_GIVEN
+    Else
+        previous_step_type = Me.Steps(Me.Steps.Count).SType
+    End If
     Set new_step = New TStep
-    new_step.SType = STEP_TYPE_GIVEN
+    If step_head = "And" Or step_head = "But" Then
+        new_step.SType = previous_step_type
+    Else
+        new_step.SType = get_step_type(step_head)
+    End If
     new_step.Head = step_head
     new_step.Name = step_name
-    Me.ParentFeature.BackgroundSteps.Add new_step
+    Me.Steps.Add new_step
 End Sub
+
+Private Function get_step_type(step_head As String) As String
+
+    Select Case step_head
+        Case "Given"
+            get_step_type = STEP_TYPE_GIVEN
+        Case "When"
+            get_step_type = STEP_TYPE_WHEN
+        Case "Then"
+            get_step_type = STEP_TYPE_THEN
+        Case Else
+            get_step_type = "unknown step type"
+    End Select
+End Function
+
+Public Property Get Steps() As Collection
+    If m_steps Is Nothing Then
+        Set m_steps = New Collection
+    End If
+    Set Steps = m_steps
+End Property
+
+Public Property Get Description() As String
+    Description = m_background_description
+End Property
+
+Public Property Let Description(ByVal background_description As String)
+    m_background_description = background_description
+End Property
