--- a/step_definitions/Steps_Parse_Features.cls
+++ b/step_definitions/Steps_Parse_Features.cls
@@ -9,99 +9,93 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Given_a_feature_this_is_just_some_text_br_without__E5818F3BFB1B()
-    'Given a feature "this is just some text <br> without a feature keyword"
-    TStepVars.feature_text = Replace("this is just some text <br> without a feature keyword", " <br> ", vbLf)
+Public Sub Given_a_feature_STR_6A3547BB2524(step_expressions As Collection)
+    'Given a feature {string}
+    TStepVars.gherkin_text = Replace(step_expressions(1), " <br> ", vbLf)
 End Sub
 
-Public Sub Given_a_feature_named_sample_feature_FD3D0FF62C49()
-    'Given a feature named "sample feature"
-    TStepVars.feature_text = "Feature: sample feature"
+Public Sub Given_a_feature_named_STR_D7FE0A9AB5B0(step_expressions As Collection)
+    'Given a feature named {string}
+    TStepVars.gherkin_text = "Feature: " & step_expressions(1)
 End Sub
 
-Public Sub Given_the_feature_includes_a_rule_this_is_a_sample_1BF5A1CEA9A0()
-    'Given the feature includes a rule "this is a sample rule"
-    TStepVars.feature_text = TStepVars.feature_text & vbLf & "Rule: this is a sample rule"
+Public Sub Given_the_feature_includes_a_rule_STR_84B3E9B8CEAF(step_expressions As Collection)
+    'Given the feature includes a rule {string}
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & "Rule: " & step_expressions(1)
 End Sub
 
-Public Sub Given_the_feature_includes_an_example_this_is_an_e_1BF5BD6536EF()
-    'Given the feature includes an example "this is an example"
-    TStepVars.feature_text = TStepVars.feature_text & vbLf & "Example: this is an example"
+Public Sub Given_the_feature_includes_an_example_STR_5D047011681B(step_expressions As Collection)
+    'Given the feature includes an example {string}
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & "Example: " & step_expressions(1)
 End Sub
 
-Public Sub Given_a_feature_starting_with___Feature_sample_fea_C087A1013C38()
-    'Given a feature starting with "  Feature: sample feature "
-    TStepVars.feature_text = "  Feature: sample feature "
+Public Sub Given_a_feature_starting_with_STR_A7345F5D1B4A(step_expressions As Collection)
+    'Given a feature starting with {string}
+    TStepVars.gherkin_text = step_expressions(1)
 End Sub
 
-Public Sub Given_the_feature_continues_with_the_line_____Rule_40058483AAFA()
-    'Given the feature continues with the line "    Rule: this is a rule"
-    TStepVars.feature_text = TStepVars.feature_text & vbLf & "    Rule: this is a rule"
+Public Sub Given_the_feature_continues_with_the_line_STR_DE25D9BF26A5(step_expressions As Collection)
+    'Given the feature continues with the line {string}
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & step_expressions(1)
 End Sub
 
-Public Sub Given_the_line_with_the_feature_keyword_is_followe_EB6ACC822715()
-    'Given the line with the feature keyword is followed by two lines "  this is<br>  the description"
-    TStepVars.feature_text = TStepVars.feature_text & vbLf & "  this is" & vbLf & "  the description"
+Public Sub Given_the_line_with_the_feature_keyword_is_followe_9A87511383CF(step_expressions As Collection)
+    'Given the line with the feature keyword is followed by two lines string
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & Replace(step_expressions(1), "<br>", vbLf)
 End Sub
 
-Public Sub Given_the_rule_is_followed_by_a_line___this_is_a_d_CCBFA097ACF8()
-    'Given the rule is followed by a line "  this is a description"
-    TStepVars.feature_text = TStepVars.feature_text & vbLf & "  this is a description"
+Public Sub Given_the_rule_is_followed_by_a_line_STR_5C8804C28717(step_expressions As Collection)
+    'Given the rule is followed by a line {string}
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & step_expressions(1)
 End Sub
 
 Public Sub Given_a_feature_F5C67A506977()
     'Given a feature
-    TStepVars.feature_text = "Feature: sample feature"
-End Sub
-
-Public Sub Given_a_feature_tag1_tag2brFeature_sample_feature_015C96EDA874()
-    'Given a feature "@tag1 @tag2<br>Feature: sample feature"
-    TStepVars.feature_text = "@tag1 @tag2" & vbLf _
-                        & "Feature: sample feature"
+    TStepVars.gherkin_text = "Feature: sample feature"
 End Sub
 
 Public Sub Given_the_first_line_of_the_feature_is___wip_impor_D41303270416()
     'Given the first line of the feature is "  @wip @important @beta"
-    TStepVars.feature_text = "  @wip @important @beta" & vbLf & TStepVars.feature_text
+    TStepVars.gherkin_text = "  @wip @important @beta" & vbLf & TStepVars.gherkin_text
 End Sub
 
 Public Sub Given_the_line_before_the_only_example_is___wip_im_FC1ACED9ED9D()
     'Given the line before the only example is "  @wip @important @beta"
-    TStepVars.feature_text = TStepVars.feature_text & vbLf & "  @wip @important @beta" & vbLf _
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & "  @wip @important @beta" & vbLf _
                         & "Example: sample example"
 End Sub
 
 Public Sub Given_the_first_line_of_the_feature_is__this_is_a__D211BCD22A79()
     'Given the first line of the feature is "# this is a comment"
-    TStepVars.feature_text = "# this is a comment" & vbLf & TStepVars.feature_text
+    TStepVars.gherkin_text = "# this is a comment" & vbLf & TStepVars.gherkin_text
 End Sub
 
 Public Sub Given_the_feature_has_an_example_with_two_steps_an_C0F08DC30BAD()
     'Given the feature has an example with two steps and a comment line between the steps
-    TStepVars.feature_text = TStepVars.feature_text & vbLf _
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf _
                         & "  Example: sample example" & vbLf _
                         & "   Given step one" & vbLf _
                         & " # this is a comment" & vbLf _
                         & "   And step two"
 End Sub
 
-Public Sub Given_the_feature_has_a_background_clause_containi_EE3E39AB4582()
+Public Sub Given_the_feature_has_a_background_clause_containi_4112AB2465A6()
     'Given the feature has a background clause containing a Given step
-        TStepVars.feature_text = TStepVars.feature_text & vbLf _
+        TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf _
                         & "  Background:" & vbLf _
                         & "   Given a step"
 End Sub
-Public Sub When_the_feature_is_parsed_1AA9891E2CA3()
+Public Sub When_the_feature_is_parsed_CEB0ED59F01F()
     'When the feature is parsed
-    Set m_parsed_feature = TFeatureParser.parse_feature(TStepVars.feature_text)
+    Set m_parsed_feature = TFeatureParser.parse_feature(TStepVars.gherkin_text)
 End Sub
 
-Public Sub Then_the_parsing_results_in_the_error_message_Feat_C2170B1F73BD()
-    'Then the parsing results in the error message "Feature lacks feature keyword at the beginning"
-    TSpec.expect(m_parsed_feature.ErrorStatus).to_be "Feature lacks feature keyword at the beginning"
+Public Sub Then_the_parsing_results_in_the_error_message_STR_9AC7D885B797(step_expressions As Collection)
+    'Then the parsing results in the error message {string}
+    TSpec.expect(m_parsed_feature.ErrorStatus).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_parsed_result_contains_a_separate_item_fo_6E788222165F()
+Public Sub Then_the_parsed_result_contains_a_separate_item_fo_C01AA5CDB981()
     'Then the parsed result contains a separate item for each of the given elements
     TSpec.expect(m_parsed_feature.Name).to_be "sample feature"
     TSpec.expect(m_parsed_feature.Clauses.Count).to_be 2
@@ -111,30 +105,30 @@ Public Sub Then_the_parsed_result_contains_a_separate_item_fo_6E788222165F()
     TSpec.expect(m_parsed_feature.Clauses(2).Name).to_be "this is an example"
 End Sub
 
-Public Sub Then_the_parsed_result_contains_a_feature_with_the_793176670299()
-    'Then the parsed result contains a feature with the name "sample feature"
-    TSpec.expect(m_parsed_feature.Name).to_be "sample feature"
+Public Sub Then_the_parsed_result_contains_a_feature_with_the_5E84028445E3(step_expressions As Collection)
+    'Then the parsed result contains a feature with the name {string}
+    TSpec.expect(m_parsed_feature.Name).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the__parsed_result_contains_a_rule_with_the_n_7F67956919B9()
-    'Then the  parsed result contains a rule with the name "this is a rule"
+Public Sub Then_the__parsed_result_contains_a_rule_with_the_n_A8084AB5C1C0(step_expressions As Collection)
+    'Then the  parsed result contains a rule with the name {string}
     TSpec.expect(TypeName(m_parsed_feature.Clauses(1))).to_be "TRule"
-    TSpec.expect(m_parsed_feature.Clauses(1).Name).to_be "this is a rule"
+    TSpec.expect(m_parsed_feature.Clauses(1).Name).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_feature_description_is_set_to_those_two_l_A335E10C9C02()
+Public Sub Then_the_feature_description_is_set_to_those_two_l_3759AF1F585B()
     'Then the feature description is set to those two lines
-    TSpec.expect(m_parsed_feature.description).to_be "this is" & vbLf & "the description"
+    TSpec.expect(m_parsed_feature.Description).to_be "this is" & vbLf & "the description"
 End Sub
 
-Public Sub Then_the_parsed_feature_contains_a_rule_5FF16597B7E1()
+Public Sub Then_the_parsed_feature_contains_a_rule_A7C0683CBA7A()
     'Then the parsed feature contains a rule
     TSpec.expect(TypeName(m_parsed_feature.Clauses(1))).to_be "TRule"
 End Sub
 
-Public Sub Then_the_rules_description_is_set_to_this_is_a_des_B3D47E4F8255()
-    'Then the rules description is set to "this is a description"
-     TSpec.expect(m_parsed_feature.Clauses(1).description).to_be "this is a description"
+Public Sub Then_the_rules_description_is_set_to_STR_750959DF7853(step_expressions As Collection)
+    'Then the rules description is set to {string}
+     TSpec.expect(m_parsed_feature.Clauses(1).Description).to_be step_expressions(1)
 End Sub
 
 Public Sub Then_the_parsed_features_contains_an_example_AF5E191DE8EE()
@@ -143,25 +137,7 @@ Public Sub Then_the_parsed_features_contains_an_example_AF5E191DE8EE()
     Set TStepVars.example = m_parsed_feature.Clauses(1)
 End Sub
 
-Public Sub Then_the_example_clause_from_the_parsed_result_con_F111F3E2BACC()
-    'Then the example clause from the parsed result contains all the steps
-    
-    Dim example_steps As Collection
-    
-    Set example_steps = m_parsed_feature.Clauses(1).Steps
-    TSpec.expect(example_steps.Count).to_be 3
-    TSpec.expect(example_steps(1).SType).to_be STEP_TYPE_GIVEN
-    TSpec.expect(example_steps(1).Name).to_be "a precondition"
-    TSpec.expect(example_steps(1).Head).to_be "Given"
-    TSpec.expect(example_steps(2).SType).to_be STEP_TYPE_WHEN
-    TSpec.expect(example_steps(2).Name).to_be "action happens"
-    TSpec.expect(example_steps(2).Head).to_be "When"
-    TSpec.expect(example_steps(3).SType).to_be STEP_TYPE_THEN
-    TSpec.expect(example_steps(3).Name).to_be "some result is expected"
-    TSpec.expect(example_steps(3).Head).to_be "Then"
-End Sub
-
-Public Sub Then_the_parsed_feature_doesnt_contain_any_error_0453F9190B1C()
+Public Sub Then_the_parsed_feature_doesnt_contain_any_error_EB00DB92B133()
     'Then the parsed feature doesn't contain any error
     TSpec.expect(m_parsed_feature.ErrorStatus).to_be vbNullString
 End Sub
@@ -185,8 +161,8 @@ Public Sub Then_the_parsed_result_contains_an_example_with_tw_7F3806C826C5()
     TSpec.expect(m_parsed_feature.Clauses(1).Steps.Count).to_be 2
 End Sub
 
-Public Sub Then_the_Given_step_is_assigned_to_the_feature_622D49FE1220()
+Public Sub Then_the_Given_step_is_assigned_to_the_feature_9078F8233D0D()
     'Then the Given step is assigned to the feature
-    TSpec.expect(m_parsed_feature.BackgroundSteps(1).StepDefinition).to_be "Given a step"
+    TSpec.expect(m_parsed_feature.Background.Steps(1).StepDefinition).to_be "Given a step"
 End Sub
 
