--- a/step_definitions/Steps_Run_Examples.cls
+++ b/step_definitions/Steps_Run_Examples.cls
@@ -25,7 +25,7 @@ End Sub
 
 Public Sub Given_a_feature_has_a_first_example_tagged_example_A6ACCC9CD3BB()
     'Given a feature has a first example "tagged example" with the tag "@sample"
-    TStepVars.feature_text = "Feature: sample feature" & vbLf _
+    TStepVars.gherkin_text = "Feature: sample feature" & vbLf _
                         & vbLf _
                         & "@sample" & vbLf _
                         & "Example: tagged example" & vbLf _
@@ -34,7 +34,7 @@ End Sub
 
 Public Sub Given_the_feature_has_a_second_example_untagged_ex_EE05AE816679()
     'Given the feature has a second example "un-tagged example" without any tag
-    TStepVars.feature_text = TStepVars.feature_text & vbLf _
+    TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf _
                         & vbLf _
                         & "Example: un-tagged example" & vbLf _
                         & "  Given a valid step"
@@ -54,7 +54,7 @@ Public Sub When_the_feature_is_executed_with_tag_parameter_sa_2662F331171B()
     
     Dim parsed_feature As TFeature
     
-    Set parsed_feature = TFeatureParser.parse_feature(TStepVars.feature_text)
+    Set parsed_feature = TFeatureParser.parse_feature(TStepVars.gherkin_text)
     Set m_feature_statistics = TFeatureRunner.run_feature(parsed_feature, filter_tag:="@sample", silent:=True)
 End Sub
 
